commiting BST, delete logic yet to be implemented

--- a/pom.xml
+++ b/pom.xml
@@ -6,5 +6,7 @@
   <packaging>pom</packaging>
   <modules>
   	<module>java-all-design-pattern</module>
+  	<module>java-all-thread</module>
+  	<module>java-all-datastructure</module>
   </modules>
 </project>
