--- a/java-all-datastructure/java-all-datastructure-algo/pom.xml
+++ b/java-all-datastructure/java-all-datastructure-algo/pom.xml
@@ -2,15 +2,8 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.all.java</groupId>
-    <artifactId>java-all</artifactId>
+    <artifactId>java-all-datastructure</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>java-all-datastructure</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-  	<module>java-all-datastructure-sorting</module>
-  	<module>java-all-datastructure-tree</module>
-  	<module>java-all-datastructure-impl</module>
-  	<module>java-all-datastructure-algo</module>
-  </modules>
+  <artifactId>java-all-datastructure-algo</artifactId>
 </project>
